crates/tui/snapshots/inline/collaboration_modes/collaboration_inline_selected.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> draft behind selector                                                         
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ Manual
