crates/tui/snapshots/inline/collaboration_modes/collaboration_inline_selector.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
    ▄  ▄     Ash Code v0.1.0                                                    
  ▗█▛██▜█▖   Automatic model                                                    
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─ Mode ─────────────────────────────────────────────────────────────────────────
                                                                                
  Agent        Complete the task                                                
  Plan         Analyze and plan without editing                                 
> Debug        Investigate and fix a problem                           Current  
  Multitask    Ash delegates and combines results                               
  Ask          Answer questions without editing                                 
                                                                                
  Esc to close
