crates/tui/snapshots/inline/collaboration_modes/collaboration_selector_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
    ▄  ▄     Ash Code v0.1.0                                                    
  ▗█▛██▜█▖   Automatic model                                                    
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─ 模 式  ─────────────────────────────────────────────────────────────────────────
                                                                                
  智 能 体     完 成 任 务                                                             
> 计 划       分 析 并 规 划 ， 不 修 改 项 目                                         当 前   
  调 试       调 查 并 修 复 问 题                                                       
  多 任 务     由  Ash 委 托 工 作 并 整 合 结 果                                            
  问 答       回 答 问 题 ， 不 修 改 项 目                                                 
                                                                                
  Esc 关 闭
