crates/tui/snapshots/inline/collaboration_modes/cooperation_alias_inline_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: "format!(\"{history}\\n{}\", render_effort(&app))"
---
● 已 开 启 多 任 务 协 作 ； 推 理 强 度 保 持 不 变 。                                           
                                                                                



















────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────
  test-model (high)
  ⏸ 手 动  · ← 仪 表 盘  · ? 查 看 快 捷 键
