crates/tui/snapshots/inline/collaboration_modes/effort_boundary_inline_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  test-model (high)                                                             
  ⏸ 手 动
