crates/tui/snapshots/inline/collaboration_modes/effort_changed_inline_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  test-model (max)                                                              
  ⏸ 手 动
